crates/iroha_data_model_derive/tests/ui_fail/transparent_api_private_item.stderr
error[E0603]: struct `BlockPayload` is private
 --> tests/ui_fail/transparent_api_private_item.rs:5:12
  |
5 | use block::BlockPayload;
  |            ^^^^^^^^^^^^ private struct
  |
note: the struct `BlockPayload` is defined here
 --> tests/ui_fail/transparent_api_private_item.rs:2:5
  |
2 |     struct BlockPayload;
  |     ^^^^^^^^^^^^^^^^^^^^
