crates/iroha_data_model_derive/tests/ui_fail/transparent_api_private_item.rs
mod block {
    struct BlockPayload;
}

use block::BlockPayload;

fn main() {}
